Fix 2 bugs in priors.py
1. Line 257 Leaf basis should not be boolean
2. Line 351 Fix the calculation process of eps_lambda
3. Btw, change data to be in roughly [-0.5, 0.5], and delete unused leaf values, both just for easier testing

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -27,42 +27,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.00327821  2.10672224  1.76898966  2.05211673  2.00693811  2.16162097\n",
-      " -0.14127659  2.15112284  1.03487759  1.23276531  1.94055996  1.88216964\n",
-      "  2.08418201  2.04593858  2.08279882  1.87834399  0.83987221  1.96685118\n",
-      "  2.0928297   2.1475949   1.17439345  0.13206617  1.77087105  1.93949993\n",
-      "  1.98107557  1.97948383  2.09895839  1.96062588  2.13276861  2.05826552\n",
-      "  0.17207698  2.13535859  1.0856794   0.94290563  2.07019536  1.93288597\n",
-      "  1.84184056  2.00921267 -0.10137174  1.06375338  1.96419833  2.05241878\n",
-      "  2.05909063  1.01967761  0.88826159  1.79270166  0.03619219  2.0232878\n",
-      "  2.03139082  1.08443852  2.13095507  2.03043667  1.86178185  2.0803585\n",
-      "  1.81690942  1.00114261  1.97068084  2.10762402  1.91666312  2.03833939\n",
-      "  2.04389932  1.9154339   1.98689133  2.02703432  1.04138903  2.02762742\n",
-      "  1.92058637  1.00720336  2.10684716  0.9703429   2.0846584   2.16042544\n",
-      "  1.89594561  1.99308621  1.92953267  2.00543536  1.19510126  2.20769805\n",
-      "  2.02292114  1.00665458  0.91626018  0.98093489  1.917775    1.85231422\n",
-      "  2.04390867  1.07307747  1.94088966  2.01078804  0.11145924  1.0328662\n",
-      "  1.13289606  2.09998242  2.01977901  1.91366547  0.95413247  1.92564118\n",
-      "  1.02344009  2.07601331  1.94817202  2.14814555  0.84104325  0.89302476\n",
-      "  0.79367617  2.03330704  2.17323116  1.98474775  1.93457167  1.76663839\n",
-      "  1.0829519   1.91118661  0.01382414  0.83977405  2.03928275  2.19372312\n",
-      "  1.88279928  1.95423006  1.97151159  2.11712471  1.98203886 -0.14821854]\n"
+      "[ 0.50032782  0.51067222  0.47689897  0.50521167  0.50069381  0.5161621\n",
+      " -0.51412766  0.51511228  0.00348776  0.02327653  0.494056    0.48821696\n",
+      "  0.5084182   0.50459386  0.50827988  0.4878344  -0.01601278  0.49668512\n",
+      "  0.50928297  0.51475949  0.01743935 -0.48679338  0.4770871   0.49394999\n",
+      "  0.49810756  0.49794838  0.50989584  0.49606259  0.51327686  0.50582655\n",
+      " -0.4827923   0.51353586  0.00856794 -0.00570944  0.50701954  0.4932886\n",
+      "  0.48418406  0.50092127 -0.51013717  0.00637534  0.49641983  0.50524188\n",
+      "  0.50590906  0.00196776 -0.01117384  0.47927017 -0.49638078  0.50232878\n",
+      "  0.50313908  0.00844385  0.51309551  0.50304367  0.48617818  0.50803585\n",
+      "  0.48169094  0.00011426  0.49706808  0.5107624   0.49166631  0.50383394\n",
+      "  0.50438993  0.49154339  0.49868913  0.50270343  0.0041389   0.50276274\n",
+      "  0.49205864  0.00072034  0.51068472 -0.00296571  0.50846584  0.51604254\n",
+      "  0.48959456  0.49930862  0.49295327  0.50054354  0.01951013  0.52076981\n",
+      "  0.50229211  0.00066546 -0.00837398 -0.00190651  0.4917775   0.48523142\n",
+      "  0.50439087  0.00730775  0.49408897  0.5010788  -0.48885408  0.00328662\n",
+      "  0.01328961  0.50999824  0.5019779   0.49136655 -0.00458675  0.49256412\n",
+      "  0.00234401  0.50760133  0.4948172   0.51481456 -0.01589567 -0.01069752\n",
+      " -0.02063238  0.5033307   0.51732312  0.49847477  0.49345717  0.47666384\n",
+      "  0.00829519  0.49111866 -0.49861759 -0.0160226   0.50392827  0.51937231\n",
+      "  0.48827993  0.49542301  0.49715116  0.51171247  0.49820389 -0.51482185]\n"
      ]
     }
    ],
    "source": [
     "proposal_probs = {\"grow\" : 0.5,\n",
     "                  \"prune\" : 0.5}\n",
-    "generator = DataGenerator(n_samples=160, n_features=2, noise=0.1, random_seed=42)\n",
+    "generator = DataGenerator(n_samples=160, n_features=2, noise=0.01, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
-    "\n",
+    "np.set_printoptions(suppress=True)\n",
     "print(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,44 +98,14 @@
       "Running iteration 260\n",
       "Running iteration 270\n",
       "Running iteration 280\n",
-      "Running iteration 290\n",
-      "Running iteration 300\n",
-      "Running iteration 310\n",
-      "Running iteration 320\n",
-      "Running iteration 330\n",
-      "Running iteration 340\n",
-      "Running iteration 350\n",
-      "Running iteration 360\n",
-      "Running iteration 370\n",
-      "Running iteration 380\n",
-      "Running iteration 390\n",
-      "Running iteration 400\n",
-      "Running iteration 410\n",
-      "Running iteration 420\n",
-      "Running iteration 430\n",
-      "Running iteration 440\n",
-      "Running iteration 450\n",
-      "Running iteration 460\n",
-      "Running iteration 470\n",
-      "Running iteration 480\n",
-      "Running iteration 490\n",
-      "Running iteration 500\n",
-      "Running iteration 510\n",
-      "Running iteration 520\n",
-      "Running iteration 530\n",
-      "Running iteration 540\n",
-      "Running iteration 550\n",
-      "Running iteration 560\n",
-      "Running iteration 570\n",
-      "Running iteration 580\n",
-      "Running iteration 590\n"
+      "Running iteration 290\n"
      ]
     }
    ],
    "source": [
     "# profiler = Profiler()\n",
     "# profiler.start()\n",
-    "bart = DefaultBART(ndpost=500, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "bart = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "bart.fit(X_train, y_train)\n",
     "# profiler.stop()\n",
     "# profiler.print()"
@@ -143,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 1 0 0 1 1 0 0 1 0 1 0 1 1 1 1 1 1 1 0 1 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0\n",
-      " 2 0 0 0 0 1 1 0 1 1 0 1 0 0 2 0 1 1 0 0 0 2 2 1 3 1 0 0 1 0 1 0 2 1 4 1 1\n",
-      " 1 1 0 1 2 1 1 1 1 1 1 0 1 0 0 1 3 0 0 0 1 0 1 1 0 0]\n",
-      "(array([61, 71, 90], dtype=int64),)\n"
+      "[1 0 1 1 2 1 1 1 2 1 2 2 1 1 2 1 1 1 1 0 2 1 0 1 1 1 1 1 2 1 1 1 2 2 0 1 3\n",
+      " 1 0 0 1 1 1 1 1 1 2 1 1 2 2 1 1 3 1 1 1 1 0 1 0 1 2 2 1 1 2 2 3 1 1 1 1 1\n",
+      " 1 5 1 1 2 1 1 1 1 1 2 2 1 1 0 2 1 1 1 1 2 1 1 2 1 1]\n",
+      "(array([36, 53, 68, 75], dtype=int64),)\n"
      ]
     }
    ],
@@ -167,105 +137,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_1 <= 0.571 (split, n = 120)\n",
-      "\tVal: 0.011 (leaf, n = 68)\n",
-      "\tVal: -0.007 (leaf, n = 52)\n",
-      "[ 1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[-0.05638511  0.01136208 -0.00694931  0.00215448 -0.00918338 -0.05508977\n",
-      " -0.09095192 -0.00449434  0.00384977  0.05150366 -0.02951537  0.03430578\n",
-      "  0.00243315         nan         nan         nan]\n"
+      "{'eps_sigma2': 0.004743495735960561}\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(bart.sampler.trace[-1].global_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
     {
-     "data": {
-      "image/svg+xml": [
-       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
-       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
-       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
-       "<!-- Generated by graphviz version 12.2.1 (20241206.2353)\n",
-       " -->\n",
-       "<!-- Pages: 1 -->\n",
-       "<svg width=\"188pt\" height=\"159pt\"\n",
-       " viewBox=\"0.00 0.00 187.50 159.48\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 155.48)\">\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-155.48 183.5,-155.48 183.5,4 -4,4\"/>\n",
-       "<!-- 0 -->\n",
-       "<g id=\"node1\" class=\"node\">\n",
-       "<title>0</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"88.12\" cy=\"-122.49\" rx=\"72.3\" ry=\"28.99\"/>\n",
-       "<text text-anchor=\"middle\" x=\"88.12\" y=\"-125.69\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Var: X_1</text>\n",
-       "<text text-anchor=\"middle\" x=\"88.12\" y=\"-109.19\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Threshold: 0.57</text>\n",
-       "</g>\n",
-       "<!-- 1 -->\n",
-       "<g id=\"node2\" class=\"node\">\n",
-       "<title>1</title>\n",
-       "<polygon fill=\"none\" stroke=\"black\" points=\"78.25,-41 0,-41 0,0 78.25,0 78.25,-41\"/>\n",
-       "<text text-anchor=\"middle\" x=\"39.12\" y=\"-23.7\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Leaf</text>\n",
-       "<text text-anchor=\"middle\" x=\"39.12\" y=\"-7.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Value: 0.01</text>\n",
-       "</g>\n",
-       "<!-- 0&#45;&gt;1 -->\n",
-       "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>0&#45;&gt;1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M74.48,-93.64C68.04,-80.51 60.35,-64.82 53.79,-51.43\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"57.03,-50.08 49.49,-42.64 50.74,-53.16 57.03,-50.08\"/>\n",
-       "<text text-anchor=\"middle\" x=\"76.34\" y=\"-62.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Left</text>\n",
-       "</g>\n",
-       "<!-- 2 -->\n",
-       "<g id=\"node3\" class=\"node\">\n",
-       "<title>2</title>\n",
-       "<polygon fill=\"none\" stroke=\"black\" points=\"179.5,-41 96.75,-41 96.75,0 179.5,0 179.5,-41\"/>\n",
-       "<text text-anchor=\"middle\" x=\"138.12\" y=\"-23.7\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Leaf</text>\n",
-       "<text text-anchor=\"middle\" x=\"138.12\" y=\"-7.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Value: &#45;0.01</text>\n",
-       "</g>\n",
-       "<!-- 0&#45;&gt;2 -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>0&#45;&gt;2</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M102.05,-93.64C108.62,-80.51 116.46,-64.82 123.16,-51.43\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"126.21,-53.15 127.55,-42.64 119.95,-50.02 126.21,-53.15\"/>\n",
-       "<text text-anchor=\"middle\" x=\"134.07\" y=\"-62.2\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Right</text>\n",
-       "</g>\n",
-       "</g>\n",
-       "</svg>\n"
-      ],
-      "text/plain": [
-       "<graphviz.graphs.Digraph at 0x176902ff050>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_0 <= 0.830 (split, n = 120)\n",
+      "\tVal: -0.047 (leaf, n = 102)\n",
+      "\tVal: -0.032 (leaf, n = 18)\n",
+      "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
+      "[        nan -0.04656084 -0.03189183         nan         nan         nan\n",
+      "         nan         nan]\n"
+     ]
     }
    ],
    "source": [
     "from bart_playground import visualize_tree\n",
-    "tree_sp : Tree = bart.sampler.trace[-1].trees[73]\n",
+    "tree_sp : Tree = bart.sampler.trace[1].trees[0]\n",
     "\n",
     "print(tree_sp)\n",
     "print(tree_sp.vars)\n",
     "print(tree_sp.leaf_vals)\n",
     "# print(tree_sp.node_indicators)\n",
-    "visualize_tree(tree_sp, tree_sp)"
+    "# visualize_tree(tree_sp, tree_sp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.56 P_prune=0.44 A_grow=0.30 A_prune=0.36 (burnin)\n",
-      "Iteration 200/300 P_grow=0.57 P_prune=0.43 A_grow=0.37 A_prune=0.49\n",
-      "Iteration 300/300 P_grow=0.57 P_prune=0.43 A_grow=0.37 A_prune=0.40\n"
+      "y_train where X_train[:,0] <= 0.830 mean: 0.28436069809598674\n",
+      "y_train where X_train[:,0] > 0.830 mean: 0.5028266794583821\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_train_le = y_train[X_train[:, 0] <= 0.830]\n",
+    "y_train_gt = y_train[X_train[:, 0] > 0.830]\n",
+    "\n",
+    "print(\"y_train where X_train[:,0] <= 0.830 mean:\", y_train_le.mean())\n",
+    "print(\"y_train where X_train[:,0] > 0.830 mean:\", y_train_gt.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 100/300 P_grow=0.55 P_prune=0.45 A_grow=0.24 A_prune=0.24 (burnin)\n",
+      "Iteration 200/300 P_grow=0.58 P_prune=0.42 A_grow=0.40 A_prune=0.40\n",
+      "Iteration 300/300 P_grow=0.59 P_prune=0.41 A_grow=0.36 A_prune=0.39\n"
      ]
     }
    ],
@@ -282,24 +238,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0070522516\n",
+      "0.19027376\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(btz.lamda)\n",
+    "# print(btz.first_sigma)\n",
+    "print(btz.sigest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.1479261173286847,\n",
-       " 'rf': 0.037581446268720384,\n",
-       " 'lr': 0.16526245493311217,\n",
-       " 'btz': 0.05354455956502713}"
+       "{'bart': 0.07488821265630978,\n",
+       " 'rf': 0.007564635053349439,\n",
+       " 'lr': 0.038809233220870286,\n",
+       " 'btz': 0.010248932694085864}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "models = {\"bart\" : bart, \n",
     "          \"rf\" : rf, \n",
     "          \"lr\" : lr,\n",
@@ -315,52 +292,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.48151805  0.19982685  0.50850674  0.23355405  0.3273954   0.3121246\n",
-      " -0.08029147  0.54329974 -0.20998965  0.35864415  0.40752257  0.31668935\n",
-      "  0.19274701  0.19982685  0.634087    0.63661315  0.03630411  0.49099286\n",
-      "  0.24448608  0.3121246   0.08106725 -0.31359774  0.46346747  0.3803551\n",
-      "  0.2186489   0.3831886   0.33007574  0.28147442  0.48437207  0.441694\n",
-      " -0.19284792  0.70973796  0.13935514  0.02418349  0.33226121  0.3030549\n",
-      "  0.51724176  0.33226121 -0.24562501  0.22643667  0.49099286  0.5810064\n",
-      "  0.67881021  0.18725895  0.17560548  0.39530973 -0.62114945  0.22889134\n",
-      "  0.43549548  0.206262    0.19982685  0.46325462  0.54329974  0.50759167\n",
-      "  0.634087   -0.26714955  0.56817049  0.37985142  0.255714    0.25419637\n",
-      "  0.39964675  0.38559311  0.3391752   0.30939979  0.27178967  0.24437852\n",
-      "  0.38335287 -0.04093167  0.34354632  0.23993823  0.46603355  0.36414045\n",
-      "  0.57291173  0.26462891  0.29912554  0.54329974  0.30779618  0.18611622\n",
-      "  0.53372927  0.08444666 -0.13690302  0.04694511  0.32757154  0.56559924\n",
-      "  0.52561582  0.24448608  0.32481628  0.24448608 -0.31359774  0.01112692\n",
-      "  0.03513544  0.24437852  0.63661315  0.60021949  0.199614    0.5610654\n",
-      " -0.07946757  0.57160272  0.42105757  0.23355405  0.01112692  0.13935514\n",
-      "  0.11007781  0.26602182  0.65415914  0.62755561  0.23355405  0.38335287\n",
-      "  0.17560548  0.35825699 -0.21980567 -0.35894651  0.17581832  0.39151332\n",
-      "  0.49575698  0.35825699  0.37306826  0.36127075  0.38559311 -0.61661272]\n",
-      "[ 0.46609612 -0.11492931  0.10201     0.25439093  0.27667502  0.00532996\n",
-      "  0.21106291  0.38688186  0.56154688  0.5241838   0.51843354  0.34491525\n",
-      "  0.56154688  0.42799961  0.30174452  0.49102773  0.31950919  0.48013767\n",
-      "  0.57310629  0.24506069  0.48013767  0.08586667  0.27667502  0.37511429\n",
-      "  0.69749485  0.36449718 -0.03750421  0.23989187  0.07554027  0.02106461\n",
-      " -0.23039797  0.20044927  0.46808291  0.11703595  0.32135419  0.5241838\n",
-      "  0.35683721 -0.39122668  0.09615968  0.42783079]\n",
-      "[2.07494339 0.10892175 1.03833771 0.89414639 2.08205285 0.03120095\n",
-      " 0.87035277 1.98524713 1.80069396 1.98688625 1.99330468 1.9528224\n",
-      " 2.0750869  2.05541165 1.93010696 2.1155312  1.94660998 2.01601906\n",
-      " 1.98824578 1.18206462 1.87483528 0.84279597 2.07823503 1.93025762\n",
-      " 2.06087615 1.99741372 0.97341612 1.9874991  1.04278904 0.93217356\n",
-      " 0.96572138 2.04396366 2.02023062 0.85194635 2.11774119 2.04746971\n",
-      " 2.08137637 0.03683566 1.79964777 2.05300647]\n"
+      "[ 0.34329356 -0.38988196 -0.14587971 -0.0361436   0.24744113 -0.37452441\n",
+      " -0.04885274  0.05947299  0.49775278  0.13365391 -0.21828501  0.15856022\n",
+      "  0.41096897  0.13146075  0.19905843  0.24747273  0.23031417  0.49662627\n",
+      "  0.34780141 -0.04929071  0.50737513 -0.35642943  0.17145617  0.38470598\n",
+      "  0.29165901  0.13285134 -0.41427073  0.00938116 -0.15963852 -0.28591256\n",
+      " -0.20823378 -0.04912247  0.21525107 -0.30172976 -0.10862269  0.18891709\n",
+      " -0.17961635 -0.55700762  0.10709073  0.49662627]\n",
+      "[ 0.50749434 -0.48910783  0.00383377 -0.01058536  0.50820528 -0.49687991\n",
+      " -0.01296472  0.49852471  0.4800694   0.49868862  0.49933047  0.49528224\n",
+      "  0.50750869  0.50554117  0.4930107   0.51155312  0.494661    0.50160191\n",
+      "  0.49882458  0.01820646  0.48748353 -0.0157204   0.5078235   0.49302576\n",
+      "  0.50608761  0.49974137 -0.00265839  0.49874991  0.0042789  -0.00678264\n",
+      " -0.00342786  0.50439637  0.50202306 -0.01480537  0.51177412  0.50474697\n",
+      "  0.50813764 -0.49631643  0.47996478  0.50530065]\n"
      ]
     }
    ],
    "source": [
-    "print(bart.sampler.trace[600].evaluate(X_test))\n",
+    "print(bart.sampler.trace[-1].evaluate(X_test))\n",
     "print(y_test)\n",
     "for i in range(100):\n",
     "    mse_i = mean_squared_error(y_test, bart.trace[i].evaluate(X_test))\n",
@@ -369,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.39781114029234965"
+       "0.09757576385098224"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -401,10 +358,7 @@
     }
    ],
    "source": [
-    "# print(bart.sampler.trace[600].evaluate())\n",
-    "# print(bart.sampler.trace[600].evaluate(X_train))\n",
-    "\n",
-    "if all([(bart.sampler.trace[600].trees[i].evaluate() == bart.sampler.trace[600].trees[i].evaluate(X_train)).all()\n",
+    "if all([(bart.sampler.trace[-1].trees[i].evaluate() == bart.sampler.trace[-1].trees[i].evaluate(X_train)).all()\n",
     "        for i in range(100)]):\n",
     "    print(\"True\")\n",
     "else:\n",
