Fix a bug in Tree.evaluate()

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,49 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.50032782  0.51067222  0.47689897  0.50521167  0.50069381  0.5161621\n",
-      " -0.51412766  0.51511228  0.00348776  0.02327653  0.494056    0.48821696\n",
-      "  0.5084182   0.50459386  0.50827988  0.4878344  -0.01601278  0.49668512\n",
-      "  0.50928297  0.51475949  0.01743935 -0.48679338  0.4770871   0.49394999\n",
-      "  0.49810756  0.49794838  0.50989584  0.49606259  0.51327686  0.50582655\n",
-      " -0.4827923   0.51353586  0.00856794 -0.00570944  0.50701954  0.4932886\n",
-      "  0.48418406  0.50092127 -0.51013717  0.00637534  0.49641983  0.50524188\n",
-      "  0.50590906  0.00196776 -0.01117384  0.47927017 -0.49638078  0.50232878\n",
-      "  0.50313908  0.00844385  0.51309551  0.50304367  0.48617818  0.50803585\n",
-      "  0.48169094  0.00011426  0.49706808  0.5107624   0.49166631  0.50383394\n",
-      "  0.50438993  0.49154339  0.49868913  0.50270343  0.0041389   0.50276274\n",
-      "  0.49205864  0.00072034  0.51068472 -0.00296571  0.50846584  0.51604254\n",
-      "  0.48959456  0.49930862  0.49295327  0.50054354  0.01951013  0.52076981\n",
-      "  0.50229211  0.00066546 -0.00837398 -0.00190651  0.4917775   0.48523142\n",
-      "  0.50439087  0.00730775  0.49408897  0.5010788  -0.48885408  0.00328662\n",
-      "  0.01328961  0.50999824  0.5019779   0.49136655 -0.00458675  0.49256412\n",
-      "  0.00234401  0.50760133  0.4948172   0.51481456 -0.01589567 -0.01069752\n",
-      " -0.02063238  0.5033307   0.51732312  0.49847477  0.49345717  0.47666384\n",
-      "  0.00829519  0.49111866 -0.49861759 -0.0160226   0.50392827  0.51937231\n",
-      "  0.48827993  0.49542301  0.49715116  0.51171247  0.49820389 -0.51482185]\n"
+      "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
+      " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
      ]
     }
    ],
    "source": [
     "proposal_probs = {\"grow\" : 0.5,\n",
     "                  \"prune\" : 0.5}\n",
-    "generator = DataGenerator(n_samples=160, n_features=2, noise=0.01, random_seed=42)\n",
+    "generator = DataGenerator(n_samples=160, n_features=2, noise=0.1, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
-    "print(y_train)"
+    "print(y_train[:12])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -98,32 +80,117 @@
       "Running iteration 260\n",
       "Running iteration 270\n",
       "Running iteration 280\n",
-      "Running iteration 290\n"
+      "Running iteration 290\n",
+      "Running iteration 300\n",
+      "Running iteration 310\n",
+      "Running iteration 320\n",
+      "Running iteration 330\n",
+      "Running iteration 340\n",
+      "Running iteration 350\n",
+      "Running iteration 360\n",
+      "Running iteration 370\n",
+      "Running iteration 380\n",
+      "Running iteration 390\n",
+      "\n",
+      "  _     ._   __/__   _ _  _  _ _/_   Recorded: 21:00:57  Samples:  18806\n",
+      " /_//_/// /_\\ / //_// / //_'/ //     Duration: 19.062    CPU time: 18.016\n",
+      "/   _/                      v5.0.1\n",
+      "\n",
+      "Profile at C:\\Users\\MX\\AppData\\Local\\Temp\\ipykernel_20996\\2230327146.py:2\n",
+      "\n",
+      "19.069 <module>  C:\\Users\\MX\\AppData\\Local\\Temp\\ipykernel_20996\\2230327146.py:1\n",
+      "└─ 19.069 DefaultBART.fit  bart_playground\\bart.py:23\n",
+      "   └─ 19.067 DefaultSampler.run  bart_playground\\samplers.py:60\n",
+      "      └─ 19.050 DefaultSampler.one_iter  bart_playground\\samplers.py:148\n",
+      "         ├─ 8.152 DefaultPrior.trees_log_mh_ratio  bart_playground\\priors.py:146\n",
+      "         │  ├─ 6.288 DefaultPrior.trees_log_marginal_lkhd_ratio  bart_playground\\priors.py:122\n",
+      "         │  │  └─ 6.239 DefaultPrior.trees_log_marginal_lkhd  bart_playground\\priors.py:302\n",
+      "         │  │     ├─ 1.486 svd  <__array_function__ internals>:177\n",
+      "         │  │     │  └─ 1.400 svd  numpy\\linalg\\linalg.py:1463\n",
+      "         │  │     ├─ 1.443 Parameters.leaf_basis  bart_playground\\params.py:417\n",
+      "         │  │     │  ├─ 0.776 <listcomp>  bart_playground\\params.py:427\n",
+      "         │  │     │  │  └─ 0.737 Tree.leaf_basis  bart_playground\\params.py:302\n",
+      "         │  │     │  │     ├─ 0.409 Tree.leaves  bart_playground\\params.py:281\n",
+      "         │  │     │  │     │  └─ 0.351 <listcomp>  bart_playground\\params.py:283\n",
+      "         │  │     │  │     │     └─ 0.192 Tree.is_leaf  bart_playground\\params.py:270\n",
+      "         │  │     │  │     └─ 0.328 [self]  bart_playground\\params.py\n",
+      "         │  │     │  └─ 0.598 hstack  <__array_function__ internals>:177\n",
+      "         │  │     │     └─ 0.463 hstack  numpy\\core\\shape_base.py:299\n",
+      "         │  │     ├─ 1.222 [self]  bart_playground\\priors.py\n",
+      "         │  │     ├─ 1.162 Parameters.evaluate  bart_playground\\params.py:378\n",
+      "         │  │     │  └─ 0.926 <listcomp>  bart_playground\\params.py:401\n",
+      "         │  │     └─ 0.926 sum  <__array_function__ internals>:177\n",
+      "         │  │           [4 frames hidden]  numpy, <built-in>\n",
+      "         │  └─ 1.834 DefaultPrior.trees_log_prior_ratio  bart_playground\\priors.py:117\n",
+      "         │     └─ 1.794 DefaultPrior.trees_log_prior  bart_playground\\priors.py:274\n",
+      "         │        ├─ 1.132 [self]  bart_playground\\priors.py\n",
+      "         │        ├─ 0.337 sum  <__array_function__ internals>:177\n",
+      "         │        │     [2 frames hidden]  numpy\n",
+      "         │        └─ 0.249 where  <__array_function__ internals>:177\n",
+      "         ├─ 4.338 Grow.propose  bart_playground\\moves.py:25\n",
+      "         │  ├─ 1.827 Grow.try_propose  bart_playground\\moves.py:66\n",
+      "         │  │  ├─ 0.671 Tree.split_leaf  bart_playground\\params.py:140\n",
+      "         │  │  │  ├─ 0.326 [self]  bart_playground\\params.py\n",
+      "         │  │  │  └─ 0.305 sum  <__array_function__ internals>:177\n",
+      "         │  │  │        [2 frames hidden]  numpy\n",
+      "         │  │  ├─ 0.502 prod  <__array_function__ internals>:177\n",
+      "         │  │  │     [2 frames hidden]  numpy\n",
+      "         │  │  └─ 0.240 Generator.choice  <built-in>\n",
+      "         │  ├─ 1.618 Parameters.copy  bart_playground\\params.py:366\n",
+      "         │  │  ├─ 0.962 Tree.copy  bart_playground\\params.py:51\n",
+      "         │  │  │  └─ 0.910 Tree.__init__  bart_playground\\params.py:11\n",
+      "         │  │  │     └─ 0.806 deepcopy  copy.py:128\n",
+      "         │  │  │           [2 frames hidden]  copy\n",
+      "         │  │  └─ 0.460 deepcopy  copy.py:128\n",
+      "         │  │        [2 frames hidden]  copy\n",
+      "         │  ├─ 0.586 Prune.try_propose  bart_playground\\moves.py:87\n",
+      "         │  └─ 0.235 Prune.is_feasible  bart_playground\\moves.py:83\n",
+      "         │     └─ 0.223 Tree.terminal_split_nodes  bart_playground\\params.py:293\n",
+      "         │        └─ 0.196 <listcomp>  bart_playground\\params.py:295\n",
+      "         ├─ 3.325 DefaultPrior.resample_leaf_vals  bart_playground\\priors.py:235\n",
+      "         │  ├─ 1.441 sqrtm  scipy\\linalg\\_matfuncs_sqrtm.py:118\n",
+      "         │  │     [3 frames hidden]  scipy\n",
+      "         │  ├─ 1.189 inv  <__array_function__ internals>:177\n",
+      "         │  │  └─ 1.172 inv  numpy\\linalg\\linalg.py:469\n",
+      "         │  └─ 0.283 [self]  bart_playground\\priors.py\n",
+      "         ├─ 1.176 Parameters.update_leaf_vals  bart_playground\\params.py:429\n",
+      "         │  ├─ 0.523 Tree.evaluate  bart_playground\\params.py:79\n",
+      "         │  │  └─ 0.500 Tree.traverse_tree  bart_playground\\params.py:55\n",
+      "         │  └─ 0.238 Tree.update_outputs  bart_playground\\params.py:261\n",
+      "         ├─ 0.915 DefaultSampler.sample_move  bart_playground\\samplers.py:86\n",
+      "         │  ├─ 0.663 Generator.choice  <built-in>\n",
+      "         │  └─ 0.204 [self]  bart_playground\\samplers.py\n",
+      "         └─ 0.710 Parameters.copy  bart_playground\\params.py:366\n",
+      "            └─ 0.704 Tree.copy  bart_playground\\params.py:51\n",
+      "               └─ 0.674 Tree.__init__  bart_playground\\params.py:11\n",
+      "                  └─ 0.603 deepcopy  copy.py:128\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# profiler = Profiler()\n",
-    "# profiler.start()\n",
-    "bart = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "profiler = Profiler()\n",
+    "profiler.start()\n",
+    "bart = DefaultBART(ndpost=300, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "bart.fit(X_train, y_train)\n",
-    "# profiler.stop()\n",
-    "# profiler.print()"
+    "profiler.stop()\n",
+    "profiler.print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 0 1 1 2 1 1 1 2 1 2 2 1 1 2 1 1 1 1 0 2 1 0 1 1 1 1 1 2 1 1 1 2 2 0 1 3\n",
-      " 1 0 0 1 1 1 1 1 1 2 1 1 2 2 1 1 3 1 1 1 1 0 1 0 1 2 2 1 1 2 2 3 1 1 1 1 1\n",
-      " 1 5 1 1 2 1 1 1 1 1 2 2 1 1 0 2 1 1 1 1 2 1 1 2 1 1]\n",
-      "(array([36, 53, 68, 75], dtype=int64),)\n"
+      "[1 1 3 1 1 2 1 1 1 1 1 1 1 1 1 3 1 0 2 1 1 2 1 1 1 0 1 1 0 1 1 1 2 1 0 2 1\n",
+      " 1 2 1 1 2 2 1 2 1 1 1 1 1 1 2 1 1 3 0 1 1 1 2 1 0 1 1 2 1 2 1 1 2 1 1 2 3\n",
+      " 1 2 1 1 1 1 1 1 2 2 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1]\n",
+      "(array([ 2, 15, 54, 73], dtype=int64),)\n"
      ]
     }
    ],
@@ -137,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': 0.004743495735960561}\n"
+      "{'eps_sigma2': 0.006508667493912149}\n"
      ]
     }
    ],
@@ -154,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -162,10 +229,10 @@
      "output_type": "stream",
      "text": [
       "X_0 <= 0.830 (split, n = 120)\n",
-      "\tVal: -0.047 (leaf, n = 102)\n",
+      "\tVal: -0.046 (leaf, n = 102)\n",
       "\tVal: -0.032 (leaf, n = 18)\n",
       "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
-      "[        nan -0.04656084 -0.03189183         nan         nan         nan\n",
+      "[        nan -0.04601371 -0.0316645          nan         nan         nan\n",
       "         nan         nan]\n"
      ]
     }
@@ -183,15 +250,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y_train where X_train[:,0] <= 0.830 mean: 0.28436069809598674\n",
-      "y_train where X_train[:,0] > 0.830 mean: 0.5028266794583821\n"
+      "y_train where X_train[:,0] <= 0.830 mean: 0.28478345154810286\n",
+      "y_train where X_train[:,0] > 0.830 mean: 0.5282667945838203\n"
      ]
     }
    ],
@@ -205,23 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.55 P_prune=0.45 A_grow=0.24 A_prune=0.24 (burnin)\n",
-      "Iteration 200/300 P_grow=0.58 P_prune=0.42 A_grow=0.40 A_prune=0.40\n",
-      "Iteration 300/300 P_grow=0.59 P_prune=0.41 A_grow=0.36 A_prune=0.39\n"
+      "Iteration 100/300 P_grow=0.55 P_prune=0.45 A_grow=0.36 A_prune=0.36 (burnin)\n",
+      "Iteration 200/300 P_grow=0.57 P_prune=0.43 A_grow=0.35 A_prune=0.37\n",
+      "Iteration 300/300 P_grow=0.57 P_prune=0.43 A_grow=0.39 A_prune=0.40\n"
      ]
     }
    ],
@@ -238,39 +298,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0070522516\n",
-      "0.19027376\n"
+      "0.009311548\n",
+      "  1 ┐(1: 10)\n",
+      "  2 ├── -0.0022\n",
+      "  3 └── 0.14\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "print(btz.lamda)\n",
-    "# print(btz.first_sigma)\n",
-    "print(btz.sigest)"
+    "print(btz._show_tree(1, 0))# , print_all=True))\n",
+    "# btz.first_sigma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.07488821265630978,\n",
-       " 'rf': 0.007564635053349439,\n",
-       " 'lr': 0.038809233220870286,\n",
-       " 'btz': 0.010248932694085864}"
+       "{'bart': 0.023760391537674806,\n",
+       " 'rf': 0.020302800535874868,\n",
+       " 'lr': 0.048045521328019404,\n",
+       " 'btz': 0.02328283761397566}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,50 +355,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.34329356 -0.38988196 -0.14587971 -0.0361436   0.24744113 -0.37452441\n",
-      " -0.04885274  0.05947299  0.49775278  0.13365391 -0.21828501  0.15856022\n",
-      "  0.41096897  0.13146075  0.19905843  0.24747273  0.23031417  0.49662627\n",
-      "  0.34780141 -0.04929071  0.50737513 -0.35642943  0.17145617  0.38470598\n",
-      "  0.29165901  0.13285134 -0.41427073  0.00938116 -0.15963852 -0.28591256\n",
-      " -0.20823378 -0.04912247  0.21525107 -0.30172976 -0.10862269  0.18891709\n",
-      " -0.17961635 -0.55700762  0.10709073  0.49662627]\n",
-      "[ 0.50749434 -0.48910783  0.00383377 -0.01058536  0.50820528 -0.49687991\n",
-      " -0.01296472  0.49852471  0.4800694   0.49868862  0.49933047  0.49528224\n",
-      "  0.50750869  0.50554117  0.4930107   0.51155312  0.494661    0.50160191\n",
-      "  0.49882458  0.01820646  0.48748353 -0.0157204   0.5078235   0.49302576\n",
-      "  0.50608761  0.49974137 -0.00265839  0.49874991  0.0042789  -0.00678264\n",
-      " -0.00342786  0.50439637  0.50202306 -0.01480537  0.51177412  0.50474697\n",
-      "  0.50813764 -0.49631643  0.47996478  0.50530065]\n"
+      "[ 0.42521308  0.34242477  0.21400383  0.38150004  0.32231214  0.35365035\n",
+      " -0.31397141  0.48707495 -0.04346153  0.08063366  0.18502987  0.34382066]\n",
+      "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
+      " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
      ]
     }
    ],
    "source": [
-    "print(bart.sampler.trace[-1].evaluate(X_test))\n",
-    "print(y_test)\n",
-    "for i in range(100):\n",
-    "    mse_i = mean_squared_error(y_test, bart.trace[i].evaluate(X_test))\n",
-    "    # print(mse_i)"
+    "print(bart.sampler.trace[-1].evaluate(X_train)[:12])\n",
+    "print(y_train[:12])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09757576385098224"
+       "0.10534048469161521"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,20 +396,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "if all([(bart.sampler.trace[-1].trees[i].evaluate() == bart.sampler.trace[-1].trees[i].evaluate(X_train)).all()\n",
-    "        for i in range(100)]):\n",
+    "            for i in range(100)]):\n",
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"False\")"
