--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -15,7 +15,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from bart_playground import *\n",
-    "import bartz"
+    "# import bartz"
    ]
   },
   {
@@ -70,14 +70,24 @@
       "Running iteration 160\n",
       "Running iteration 170\n",
       "Running iteration 180\n",
-      "Running iteration 190\n"
+      "Running iteration 190\n",
+      "Running iteration 200\n",
+      "Running iteration 210\n",
+      "Running iteration 220\n",
+      "Running iteration 230\n",
+      "Running iteration 240\n",
+      "Running iteration 250\n",
+      "Running iteration 260\n",
+      "Running iteration 270\n",
+      "Running iteration 280\n",
+      "Running iteration 290\n"
      ]
     }
    ],
    "source": [
     "# profiler = Profiler()\n",
     "# profiler.start()\n",
-    "bart = DefaultBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "bart = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "bart.fit(X_train, y_train)\n",
     "# profiler.stop()\n",
     "# profiler.print()"
@@ -92,10 +102,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 1 1 1 1 4 1 2 2 2 1 1 0 1 1 1 1 2 2 1 3 1 1 1 1 1 1 1 1 1 1 1 2 1 1\n",
-      " 2 1 1 2 1 1 1 1 1 1 3 2 1 3 2 1 1 1 1 2 1 1 1 2 1 1 0 1 2 1 1 1 1 1 1 3 1\n",
-      " 1 2 1 2 1 1 2 1 0 1 1 0 2 1 0 1 1 2 1 1 1 1 0 1 1 1]\n",
-      "(array([ 7, 22, 47, 50, 72], dtype=int64),)\n"
+      "[1 2 1 0 0 1 2 1 1 2 1 2 2 1 1 1 1 2 2 1 0 1 1 1 1 1 1 1 2 1 1 1 0 1 1 1 1\n",
+      " 1 1 1 1 3 1 2 1 1 1 2 1 1 2 2 1 1 1 1 0 1 1 0 1 2 1 1 1 3 1 2 1 1 1 1 3 1\n",
+      " 1 1 1 2 1 1 1 1 1 1 1 2 2 1 2 1 1 3 2 4 0 1 2 1 2 1]\n",
+      "(array([41, 65, 72, 91, 93], dtype=int64),)\n"
      ]
     }
    ],
@@ -116,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': 0.005733414508936351}\n"
+      "{'eps_sigma2': 0.007642923877694697}\n"
      ]
     }
    ],
@@ -133,23 +143,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_1 <= 0.116 (split, n = 120)\n",
-      "\tX_0 <= 0.093 (split, n = 15)\n",
-      "\t\tVal: 0.003 (leaf, n = 1)\n",
-      "\t\tVal: 0.008 (leaf, n = 14)\n",
-      "\tX_0 <= 0.287 (split, n = 105)\n",
-      "\t\tVal: 0.005 (leaf, n = 34)\n",
-      "\t\tVal: 0.035 (leaf, n = 71)\n",
-      "[ 1  0  0 -1 -1 -1 -1 -2 -2 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[       nan        nan        nan 0.00320229 0.00783413 0.00538357\n",
-      " 0.03476661        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan]\n"
+      "X_0 <= 0.830 (split, n = 120)\n",
+      "\tVal: -0.046 (leaf, n = 102)\n",
+      "\tVal: -0.032 (leaf, n = 18)\n",
+      "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
+      "[        nan -0.04601371 -0.0316645          nan         nan         nan\n",
+      "         nan         nan]\n"
      ]
     }
    ],
    "source": [
     "from bart_playground import visualize_tree\n",
-    "tree_sp : Tree = bart.sampler.trace[-1].trees[72]\n",
+    "tree_sp : Tree = bart.sampler.trace[1].trees[0]\n",
     "\n",
     "print(tree_sp)\n",
     "print(tree_sp.vars)\n",
@@ -186,50 +191,66 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 100/300 P_grow=0.55 P_prune=0.45 A_grow=0.36 A_prune=0.36 (burnin)\n",
-      "Iteration 200/300 P_grow=0.57 P_prune=0.43 A_grow=0.35 A_prune=0.37\n",
-      "Iteration 300/300 P_grow=0.57 P_prune=0.43 A_grow=0.39 A_prune=0.40\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf = RandomForestRegressor(random_state=42)\n",
+    "rf = RandomForestRegressor()\n",
     "lr = LinearRegression()\n",
     "rf.fit(X_train, y_train)\n",
     "lr.fit(X_train, y_train)\n",
     "\n",
-    "btz = bartz.BART.gbart(np.transpose(X_train), y_train, ntree=100, ndpost=200, nskip=100)\n",
-    "btpred_all = btz.predict(np.transpose(X_test))\n",
-    "btpred = np.mean(np.array(btpred_all), axis=0)"
+    "# btz = bartz.BART.gbart(np.transpose(X_train), y_train, ntree=100, ndpost=200, nskip=100)\n",
+    "# btpred_all = btz.predict(np.transpose(X_test))\n",
+    "# btpred = np.mean(np.array(btpred_all), axis=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(btz.lamda)\n",
+    "# print(btz._show_tree(1, 0))# , print_all=True))\n",
+    "\n",
+    "# btz.first_sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.02370939871385235,\n",
-       " 'rf': 0.022139023845392215,\n",
-       " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02328283631252247}"
+       "{'bart': 0.02348080777490483,\n",
+       " 'rf': 0.02169203808209099,\n",
+       " 'lr': 0.048045521328019404}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "models = {\"bart\" : bart, \n",
     "          \"rf\" : rf, \n",
-    "          \"lr\" : lr,\n",
-    "          \"btz\" : btz}\n",
+    "          \"lr\" : lr}#,\n",
+    "          #\"btz\" : btz}\n",
     "results = {}\n",
     "for model_name, model in models.items():\n",
     "    if model_name == \"btz\":\n",
@@ -241,15 +262,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.36899463  0.33800563  0.27153915  0.31520681  0.34463921  0.38089753\n",
-      " -0.41651139  0.39616038 -0.11335028 -0.00896246  0.22936939  0.34190874]\n",
+      "[ 0.34395396  0.36112538  0.1337295   0.20110625  0.31703823  0.41806062\n",
+      " -0.41340886  0.30941164 -0.11689252  0.01780752  0.19348933  0.33764771]\n",
       "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
       " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
      ]
@@ -262,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +292,7 @@
        "0.10534048469161521"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
