--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,117 +80,32 @@
       "Running iteration 260\n",
       "Running iteration 270\n",
       "Running iteration 280\n",
-      "Running iteration 290\n",
-      "Running iteration 300\n",
-      "Running iteration 310\n",
-      "Running iteration 320\n",
-      "Running iteration 330\n",
-      "Running iteration 340\n",
-      "Running iteration 350\n",
-      "Running iteration 360\n",
-      "Running iteration 370\n",
-      "Running iteration 380\n",
-      "Running iteration 390\n",
-      "\n",
-      "  _     ._   __/__   _ _  _  _ _/_   Recorded: 21:00:57  Samples:  18806\n",
-      " /_//_/// /_\\ / //_// / //_'/ //     Duration: 19.062    CPU time: 18.016\n",
-      "/   _/                      v5.0.1\n",
-      "\n",
-      "Profile at C:\\Users\\MX\\AppData\\Local\\Temp\\ipykernel_20996\\2230327146.py:2\n",
-      "\n",
-      "19.069 <module>  C:\\Users\\MX\\AppData\\Local\\Temp\\ipykernel_20996\\2230327146.py:1\n",
-      "└─ 19.069 DefaultBART.fit  bart_playground\\bart.py:23\n",
-      "   └─ 19.067 DefaultSampler.run  bart_playground\\samplers.py:60\n",
-      "      └─ 19.050 DefaultSampler.one_iter  bart_playground\\samplers.py:148\n",
-      "         ├─ 8.152 DefaultPrior.trees_log_mh_ratio  bart_playground\\priors.py:146\n",
-      "         │  ├─ 6.288 DefaultPrior.trees_log_marginal_lkhd_ratio  bart_playground\\priors.py:122\n",
-      "         │  │  └─ 6.239 DefaultPrior.trees_log_marginal_lkhd  bart_playground\\priors.py:302\n",
-      "         │  │     ├─ 1.486 svd  <__array_function__ internals>:177\n",
-      "         │  │     │  └─ 1.400 svd  numpy\\linalg\\linalg.py:1463\n",
-      "         │  │     ├─ 1.443 Parameters.leaf_basis  bart_playground\\params.py:417\n",
-      "         │  │     │  ├─ 0.776 <listcomp>  bart_playground\\params.py:427\n",
-      "         │  │     │  │  └─ 0.737 Tree.leaf_basis  bart_playground\\params.py:302\n",
-      "         │  │     │  │     ├─ 0.409 Tree.leaves  bart_playground\\params.py:281\n",
-      "         │  │     │  │     │  └─ 0.351 <listcomp>  bart_playground\\params.py:283\n",
-      "         │  │     │  │     │     └─ 0.192 Tree.is_leaf  bart_playground\\params.py:270\n",
-      "         │  │     │  │     └─ 0.328 [self]  bart_playground\\params.py\n",
-      "         │  │     │  └─ 0.598 hstack  <__array_function__ internals>:177\n",
-      "         │  │     │     └─ 0.463 hstack  numpy\\core\\shape_base.py:299\n",
-      "         │  │     ├─ 1.222 [self]  bart_playground\\priors.py\n",
-      "         │  │     ├─ 1.162 Parameters.evaluate  bart_playground\\params.py:378\n",
-      "         │  │     │  └─ 0.926 <listcomp>  bart_playground\\params.py:401\n",
-      "         │  │     └─ 0.926 sum  <__array_function__ internals>:177\n",
-      "         │  │           [4 frames hidden]  numpy, <built-in>\n",
-      "         │  └─ 1.834 DefaultPrior.trees_log_prior_ratio  bart_playground\\priors.py:117\n",
-      "         │     └─ 1.794 DefaultPrior.trees_log_prior  bart_playground\\priors.py:274\n",
-      "         │        ├─ 1.132 [self]  bart_playground\\priors.py\n",
-      "         │        ├─ 0.337 sum  <__array_function__ internals>:177\n",
-      "         │        │     [2 frames hidden]  numpy\n",
-      "         │        └─ 0.249 where  <__array_function__ internals>:177\n",
-      "         ├─ 4.338 Grow.propose  bart_playground\\moves.py:25\n",
-      "         │  ├─ 1.827 Grow.try_propose  bart_playground\\moves.py:66\n",
-      "         │  │  ├─ 0.671 Tree.split_leaf  bart_playground\\params.py:140\n",
-      "         │  │  │  ├─ 0.326 [self]  bart_playground\\params.py\n",
-      "         │  │  │  └─ 0.305 sum  <__array_function__ internals>:177\n",
-      "         │  │  │        [2 frames hidden]  numpy\n",
-      "         │  │  ├─ 0.502 prod  <__array_function__ internals>:177\n",
-      "         │  │  │     [2 frames hidden]  numpy\n",
-      "         │  │  └─ 0.240 Generator.choice  <built-in>\n",
-      "         │  ├─ 1.618 Parameters.copy  bart_playground\\params.py:366\n",
-      "         │  │  ├─ 0.962 Tree.copy  bart_playground\\params.py:51\n",
-      "         │  │  │  └─ 0.910 Tree.__init__  bart_playground\\params.py:11\n",
-      "         │  │  │     └─ 0.806 deepcopy  copy.py:128\n",
-      "         │  │  │           [2 frames hidden]  copy\n",
-      "         │  │  └─ 0.460 deepcopy  copy.py:128\n",
-      "         │  │        [2 frames hidden]  copy\n",
-      "         │  ├─ 0.586 Prune.try_propose  bart_playground\\moves.py:87\n",
-      "         │  └─ 0.235 Prune.is_feasible  bart_playground\\moves.py:83\n",
-      "         │     └─ 0.223 Tree.terminal_split_nodes  bart_playground\\params.py:293\n",
-      "         │        └─ 0.196 <listcomp>  bart_playground\\params.py:295\n",
-      "         ├─ 3.325 DefaultPrior.resample_leaf_vals  bart_playground\\priors.py:235\n",
-      "         │  ├─ 1.441 sqrtm  scipy\\linalg\\_matfuncs_sqrtm.py:118\n",
-      "         │  │     [3 frames hidden]  scipy\n",
-      "         │  ├─ 1.189 inv  <__array_function__ internals>:177\n",
-      "         │  │  └─ 1.172 inv  numpy\\linalg\\linalg.py:469\n",
-      "         │  └─ 0.283 [self]  bart_playground\\priors.py\n",
-      "         ├─ 1.176 Parameters.update_leaf_vals  bart_playground\\params.py:429\n",
-      "         │  ├─ 0.523 Tree.evaluate  bart_playground\\params.py:79\n",
-      "         │  │  └─ 0.500 Tree.traverse_tree  bart_playground\\params.py:55\n",
-      "         │  └─ 0.238 Tree.update_outputs  bart_playground\\params.py:261\n",
-      "         ├─ 0.915 DefaultSampler.sample_move  bart_playground\\samplers.py:86\n",
-      "         │  ├─ 0.663 Generator.choice  <built-in>\n",
-      "         │  └─ 0.204 [self]  bart_playground\\samplers.py\n",
-      "         └─ 0.710 Parameters.copy  bart_playground\\params.py:366\n",
-      "            └─ 0.704 Tree.copy  bart_playground\\params.py:51\n",
-      "               └─ 0.674 Tree.__init__  bart_playground\\params.py:11\n",
-      "                  └─ 0.603 deepcopy  copy.py:128\n",
-      "\n",
-      "\n"
+      "Running iteration 290\n"
      ]
     }
    ],
    "source": [
-    "profiler = Profiler()\n",
-    "profiler.start()\n",
-    "bart = DefaultBART(ndpost=300, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "# profiler = Profiler()\n",
+    "# profiler.start()\n",
+    "bart = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "bart.fit(X_train, y_train)\n",
-    "profiler.stop()\n",
-    "profiler.print()"
+    "# profiler.stop()\n",
+    "# profiler.print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 3 1 1 2 1 1 1 1 1 1 1 1 1 3 1 0 2 1 1 2 1 1 1 0 1 1 0 1 1 1 2 1 0 2 1\n",
-      " 1 2 1 1 2 2 1 2 1 1 1 1 1 1 2 1 1 3 0 1 1 1 2 1 0 1 1 2 1 2 1 1 2 1 1 2 3\n",
-      " 1 2 1 1 1 1 1 1 2 2 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1]\n",
-      "(array([ 2, 15, 54, 73], dtype=int64),)\n"
+      "[1 2 1 0 0 1 2 1 1 2 1 2 2 1 1 1 1 2 2 1 0 1 1 1 1 1 1 1 2 1 1 1 0 1 1 1 1\n",
+      " 1 1 1 1 3 1 2 1 1 1 2 1 1 2 2 1 1 1 1 0 1 1 0 1 2 1 1 1 3 1 2 1 1 1 1 3 1\n",
+      " 1 1 1 2 1 1 1 1 1 1 1 2 2 1 2 1 1 3 2 4 0 1 2 1 2 1]\n",
+      "(array([41, 65, 72, 91, 93], dtype=int64),)\n"
      ]
     }
    ],
@@ -204,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': 0.006508667493912149}\n"
+      "{'eps_sigma2': 0.007642923877694697}\n"
      ]
     }
    ],
@@ -221,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +201,7 @@
     }
    ],
    "source": [
-    "rf = RandomForestRegressor()\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
     "lr = LinearRegression()\n",
     "rf.fit(X_train, y_train)\n",
     "lr.fit(X_train, y_train)\n",
@@ -298,42 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.009311548\n",
-      "  1 ┐(1: 10)\n",
-      "  2 ├── -0.0022\n",
-      "  3 └── 0.14\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(btz.lamda)\n",
-    "print(btz._show_tree(1, 0))# , print_all=True))\n",
-    "# btz.first_sigma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.023760391537674806,\n",
-       " 'rf': 0.020302800535874868,\n",
+       "{'bart': 0.02348080777490483,\n",
+       " 'rf': 0.020751787675300937,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02328283761397566}"
+       " 'btz': 0.02328283631252247}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,15 +247,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.42521308  0.34242477  0.21400383  0.38150004  0.32231214  0.35365035\n",
-      " -0.31397141  0.48707495 -0.04346153  0.08063366  0.18502987  0.34382066]\n",
+      "[ 0.34395396  0.36112538  0.1337295   0.20110625  0.31703823  0.41806062\n",
+      " -0.41340886  0.30941164 -0.11689252  0.01780752  0.19348933  0.33764771]\n",
       "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
       " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
      ]
@@ -376,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +277,7 @@
        "0.10534048469161521"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
