--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -70,24 +70,14 @@
       "Running iteration 160\n",
       "Running iteration 170\n",
       "Running iteration 180\n",
-      "Running iteration 190\n",
-      "Running iteration 200\n",
-      "Running iteration 210\n",
-      "Running iteration 220\n",
-      "Running iteration 230\n",
-      "Running iteration 240\n",
-      "Running iteration 250\n",
-      "Running iteration 260\n",
-      "Running iteration 270\n",
-      "Running iteration 280\n",
-      "Running iteration 290\n"
+      "Running iteration 190\n"
      ]
     }
    ],
    "source": [
     "# profiler = Profiler()\n",
     "# profiler.start()\n",
-    "bart = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "bart = DefaultBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "bart.fit(X_train, y_train)\n",
     "# profiler.stop()\n",
     "# profiler.print()"
@@ -95,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 1 0 0 1 2 1 1 2 1 2 2 1 1 1 1 2 2 1 0 1 1 1 1 1 1 1 2 1 1 1 0 1 1 1 1\n",
-      " 1 1 1 1 3 1 2 1 1 1 2 1 1 2 2 1 1 1 1 0 1 1 0 1 2 1 1 1 3 1 2 1 1 1 1 3 1\n",
-      " 1 1 1 2 1 1 1 1 1 1 1 2 2 1 2 1 1 3 2 4 0 1 2 1 2 1]\n",
-      "(array([41, 65, 72, 91, 93], dtype=int64),)\n"
+      "[2 1 1 1 3 1 2 1 1 0 1 1 1 1 1 1 1 1 1 1 0 3 1 1 1 2 1 1 1 1 1 1 2 1 2 1 2\n",
+      " 0 2 2 1 1 1 1 1 3 3 3 1 2 1 1 1 1 3 2 1 1 1 1 2 0 2 1 1 2 2 2 2 1 1 2 1 2\n",
+      " 2 1 1 2 1 3 1 1 1 2 1 1 0 1 1 2 1 1 2 0 2 1 1 1 2 2]\n",
+      "(array([ 4, 21, 45, 46, 47, 54, 79], dtype=int64),)\n"
      ]
     }
    ],
@@ -119,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': 0.007642923877694697}\n"
+      "{'eps_sigma2': 0.006807643694776954}\n"
      ]
     }
    ],
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +209,8 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.02348080777490483,\n",
-       " 'rf': 0.020751787675300937,\n",
+       "{'bart': 0.022765587579364577,\n",
+       " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283631252247}"
       ]
@@ -231,7 +221,6 @@
     }
    ],
    "source": [
-    "\n",
     "models = {\"bart\" : bart, \n",
     "          \"rf\" : rf, \n",
     "          \"lr\" : lr,\n",
@@ -254,8 +243,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.34395396  0.36112538  0.1337295   0.20110625  0.31703823  0.41806062\n",
-      " -0.41340886  0.30941164 -0.11689252  0.01780752  0.19348933  0.33764771]\n",
+      "[ 0.31903534  0.33416735  0.23065336  0.34556637  0.40958573  0.45244747\n",
+      " -0.36479328  0.40345105 -0.06177816  0.14769672  0.32474354  0.35242618]\n",
       "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
       " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
      ]
